[package]
name = "andromeda"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.8", features = ["macros"] }
async-graphql = "7.2.0"
async-graphql-axum = "7.2.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "tls-rustls"] }
resend-rs = { version = "0.19.0", features = ["rustls-tls"], default-features = false }
envy = "0.4.2"