[package]
name = "starfish"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
async-graphql = { version = "7.2.0", features = ["chrono", "uuid", "dataloader"] }
async-graphql-axum = "7.2.0"
tower-http = { version = "0.6.8", features = ["cors"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "tls-rustls", "uuid", "chrono"] }
resend-rs = { version = "0.21.0", features = ["rustls-tls"], default-features = false }
starfish-stripe = { version = "0.1.6", features = ["rustls-tls"], default-features = false }
uuid = { version = "1.19.0", features = ["v7"] }
envy = "0.4.2"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.10.0"
sha2 = "0.10.9"
md5 = "0.8.0"
hex = "0.4.3"
base64 = "0.22.1"